Fix: Alignment of bullet lists

--- a/src/HomePage/index.css
+++ b/src/HomePage/index.css
@@ -34,7 +34,7 @@
 }
 
 ul>li {
-  margin-left: 10px;
+  margin-left: 20px;
   list-style-type: disc;
 }
 
